# basil

./: Cargo.toml  Trunk.toml  build.sh  index-62982121f9566a77.js  index-62982121f9566a77_bg.wasm  index.html  index.scss
src/: main.rs  mesh.rs  texture.rs
src/components/: dna_options.rs  mesh_viewer.rs  mod.rs  plant_viewer.rs  slider.rs
src/components/shaders/: shaded.wgsl  unshaded.wgsl
src/generate/: branch.rs  distribution.rs  leaf.rs  mod.rs
